--- a/xbee-pack.yaml
+++ b/xbee-pack.yaml
@@ -25,7 +25,7 @@ var:
     version: 6.8
 
 provision:
-  - url: https://ftp.gnu.org/gnu/texinfo/texinfo-{{ .version }}.tar.xz
+  - url: https://ftp.gnu.org/gnu/texinfo/texinfo-{{ .xbee.version }}.tar.xz
 
 build:
   - shell:
@@ -34,6 +34,6 @@ build:
         - ./configure --prefix=/usr
         - make
         - make install DESTDIR={{ .xbee.out }}
-      directory: "{{ .xbee.src }}/texinfo-{{ .version }}"
+      directory: "{{ .xbee.src }}/texinfo-{{ .xbee.version }}"
 
 
